# rag-chatbot

./: .env.example  .gitignore  DATASET.md  README.md  pyproject.toml  requirements.txt
app/: api.py  main.py
app/static/: app.js  index.html  style.css
rag/: config.py  exceptions.py  logging_config.py  models.py
rag/embeddings/: embedder.py
rag/generation/: generator.py  prompt.py
rag/ingestion/: pdf_loader.py
rag/processing/: chunker.py  cleaner.py
rag/retrieval/: retriever.py
rag/vectorstore/: faiss_store.py
scripts/: generate_test_pdfs.py  ingest_corpus.py
tests/: test_api.py  test_chunker.py  test_cleaner.py  test_config.py  test_embedder.py  test_faiss_store.py  test_generator.py  test_pdf_loader.py  test_prompt.py  test_retriever.py
